src/styles/project_list.css
/* Scaffolding */

.projects .views-row {
    clear: both;
    padding: 20px 0;
    width: 100%;
}

.projects .views-row .img_container {
    box-shadow: 2px 2px 4px 2px #999999;
    -moz-box-shadow: 2px 2px 4px 2px #999999;
    -webkit-box-shadow: 2px 2px 4px 2px #999999;
}

.projects .views-row-even .img_container {
    float: left;
    margin-left: 4px;
}

.projects .views-row-odd .img_container {
    float: right;
    margin-right: 8px;
}

.projects .views-row-even .proj_text {
    margin-left: 260px;
}

.projects .views-row-odd .proj_text {
    margin-right: 260px;
}

.projects .views-row .proj_text .proj_desc {
    font-size: 14px;
    line-height: 1.15;
    text-align: justify;
}

.projects .views-row .proj_text .proj_title h2 {
    margin: 5px 0 10px;
}

.spacer { margin: 0 2px; }
.spacer:before { content: '|'; }


/* Responsive Adjustments */

/* @media print, screen and (max-width: 960px) {} */

@media print, screen and (max-width: 720px) {
    .projects .views-row-even .img_container,
    .projects .views-row-odd .img_container {
        float: left;
        margin: auto 0;
    }

    .projects .views-row .proj_text {
        clear: both;
        margin: auto 0;
    }

    .projects .views-row .proj_text .proj_title h2 {
        margin: 0;
        padding-top: 10px;
    }
}

/* @media print, screen and (max-width: 480px) {} */

/* @media print {} */

